Implement object manipulation API for tournaments
Implement the manipulation of all existing tournament objects through
the API, including modified string representations for Player and
Manager objects.

This commit also includes modifications to the specifications in the
OpenAPI yaml file found in `docs/`.
