# insalan/tournament/models.py
@@ -1,8 +1,14 @@
 """
 Module that contains the declaration of structures tied to tournaments
 """
+
+# Disable lints:
+# "Too few public methods"
+# pylint: disable=R0903
+
 from typing import List, Optional
 from django.db import models
+from django.core.validators import MaxValueValidator, MinValueValidator
 from django.utils.translation import gettext_lazy as _
 
 from insalan.user.models import Player, Manager
@@ -20,8 +26,22 @@ class Event(models.Model):
 
     name = models.CharField(verbose_name="Event Name", max_length=40, null=False)
     description = models.CharField(verbose_name="Event Description", max_length=128)
-    year = models.IntegerField(null=False)
-    month = models.IntegerField(null=False)
+    year = models.IntegerField(null=False, validators=[
+        MinValueValidator(2003)
+        ])
+    month = models.IntegerField(null=False, validators=[
+        MinValueValidator(1),
+        MaxValueValidator(12)
+        ])
+    ongoing = models.BooleanField(default=False)
+
+    def __str__(self) -> str:
+        """Format this Event to a str"""
+        return f'{self.name} ({self.year}-{self.month})'
+
+    def get_tournaments_id(self) -> List[int]:
+        """Return the list of tournaments identifiers for that Event"""
+        return Tournament.objects.filter(event=self).values_list('id', flat=True)
 
     def get_tournaments(self) -> List["Tournament"]:
         """Return the list of tournaments for that Event"""
@@ -34,6 +54,20 @@ class Game(models.Model):
     """
 
     name = models.CharField(verbose_name="Game Name", max_length=40, null=False)
+    short_name = models.CharField(verbose_name="Short Name", max_length=10,
+                                  null=False, blank=False)
+
+    def __str__(self) -> str:
+        """Format this Game to a str"""
+        return f'{self.name} ({self.short_name})'
+
+    def get_name(self) -> str:
+        """Return the name of the game"""
+        return self.name
+
+    def get_short_name(self) -> str:
+        """Return the short name of the game"""
+        return self.short_name
 
 
 class Tournament(models.Model):
@@ -43,6 +77,16 @@ class Tournament(models.Model):
 
     event = models.ForeignKey(Event, on_delete=models.CASCADE)
     game = models.ForeignKey(Game, on_delete=models.CASCADE)
+    name = models.CharField(verbose_name="Tournament name", default="",
+                            max_length=40)
+
+    def __str__(self) -> str:
+        """Format this Tournament to a str"""
+        return f'{self.name} (@ {self.event.__str__()})'
+
+    def get_name(self) -> str:
+        """Get the name of the tournament"""
+        return self.name
 
     def get_event(self) -> Event:
         """Get the event of a tournament"""
@@ -55,6 +99,10 @@ class Tournament(models.Model):
     def get_teams(self) -> List["Team"]:
         """Return the list of Teams in that Tournament"""
         return Team.objects.filter(tournament=self)
+
+    def get_teams_id(self) -> List[int]:
+        """Return the list of identifiers of this Tournament's Teams"""
+        return self.get_teams().values_list('id', flat=True)
 
 
 class Team(models.Model):
@@ -75,6 +123,10 @@ class Team(models.Model):
                                         name="no_name_conflict_in_tournament")
                 ]
 
+    def __str__(self) -> str:
+        """Format this team to a str"""
+        return f'{self.name}'
+
     def get_name(self):
         """
         Retrieve the name of this team.
@@ -87,17 +139,29 @@ class Team(models.Model):
         """
         return self.tournament
 
-    def get_players(self):
+    def get_players(self) -> List[Player]:
         """
         Retrieve all the players in the database for that team
         """
         return Player.objects.filter(team=self)
 
-    def get_managers(self):
+    def get_players_id(self) -> List[int]:
+        """
+        Retrieve the user identifiers of all players
+        """
+        return self.get_players().values_list('user_id', flat=True)
+
+    def get_managers(self) -> List[Manager]:
         """
         Retrieve all the managers in the database for that team
         """
         return Manager.objects.filter(team=self)
+
+    def get_managers_id(self) -> List[int]:
+        """
+        Retrieve the user identifiers of all managers
+        """
+        return self.get_managers().values_list('user_id', flat=True)
 
 
 # vim: set cc=80 tw=80:
